Fixed label wrapping

--- a/src/CreateAccount/CreateAccount.css
+++ b/src/CreateAccount/CreateAccount.css
@@ -15,7 +15,7 @@
     padding: 0px 0px 20px 0px;
 }
 
-label {
+.label-text {
     margin: 10px 0px 10px 0px;
     color: white;
     font-weight: 600;
